# python-appconfig

./: README.md  appconf-polkit-helper  appconfig-polkit-helper.py  pyproject.toml  setup.py
appconfig/: appConfig.py  manager.py
auth-helpers/: login.qml
auth-helpers/Login/: Login.qml
auth-helpers/LoginAuth/: Login.qml  qmldir
debian/: appconfig-polkit-helper.install  appconfig-polkit-helper.pkexec  appconfig-polkit-helper.pofiles  changelog  control  copyright  python3-appconfig-tools.pkexec  python3-appconfig.pofiles  python3-appconfig.postinstall  rules
examples/: example.py
examples/stacks/: exampleStack.py  exampleStackParm.py
lliurex-po/: generate_po.sh
lliurex-po/n4d-agent-appconfig/: ca_ES.UTF-8@valencia.po  es_ES.po  n4d-agent-appconfig.pot
lliurex-po/python3-appconfig/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES.mo  ca_ES.po  es_ES.mo  es_ES.po  python3-appconfig.pot
python2/appconfig/: appConfig.py
python3/appconfig/: appConfig.py  appConfigN4d.py  appConfigScreen.py  appConfigStack.py  appconfigControls.py  login.qml  n4dCredentialsBox.py
src/appconf/: appConf.py
src/appconfig/: appConfig.py  manager.py
